[metadata]
name = knowledge-pp
version = 0.0.1
author = Aliaume Lopez
author_email = alopez@irif.fr
description = Templating Language for Knowledge and LaTeX
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/AliaumeL/knowledge-pp
project_urls =
    Bug Tracker = https://github.com/AliaumeL/knowledge-pp/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GPL 3
    Operating System :: OS Independent
keywords =
    knowledge :: latex :: pre-processor

[options]
packages = find:
python_requires = >=3.6
install_requires =
    click
    dataclasses

[options.package_data]
    * = *.txt

[options.entry_points]
console_scripts =
        kwpp = knowledge_pp.scripts.app:cli
